data/derived/fa15/progs/unify/prog2941.ml.out
Characters 8-15:
  let _ = [1;3;2] [1];;
          ^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
